# lab8

./: .travis.yml  CMakeLists.txt  README.md
include/: header.hpp
sources/: source.cpp
